fixed alignment on homepage

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,3 +93,8 @@ a:hover .svg {
 .questions-list, .new-question{
   margin-top:50px;
 }
+
+.new-testmaker {
+  margin-top:50px;
+
+}
